remove about page from top nav, fix footer alignment for mobile

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -3,7 +3,6 @@
 .top-nav        { grid-area: top-nav; padding: 1rem; }
 .nav-home       { grid-area: nav-home; }
 .nav-work       { grid-area: nav-work; padding: 0 1rem; }
-.nav-about      { grid-area: nav-about; padding: 0 1rem; }
 .nav-contact    { grid-area: nav-contact; padding: 0 1rem; }
 .active         { @include active-nav(); }
 
@@ -31,9 +30,9 @@ footer          { grid-area: footer; @include footer(); }
 .top-nav {
     display: grid;
     padding: 2rem 4rem;
-    grid-template-columns: 2fr 8fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 8fr 1fr 1fr;
     grid-template-areas: 
-    " nav-home nav-home nav-work nav-about nav-contact"
+    " nav-home nav-home nav-work nav-contact"
 }
 
 .grid-body {
@@ -49,10 +48,10 @@ footer          { grid-area: footer; @include footer(); }
     }
 
     .top-nav {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-template-areas:
-        " nav-home nav-home nav-home "
-        " nav-work nav-about nav-contact ";
+        " nav-home nav-home "
+        " nav-work nav-contact ";
     }
     
     .nav-home, .nav-work, .nav-about, .nav-contact {
@@ -63,6 +62,10 @@ footer          { grid-area: footer; @include footer(); }
         grid-template-columns: 1fr;
         grid-row-gap: 1rem;
         padding: 0 1.5rem;
+    }
+
+    footer {
+        text-align: center;
     }
 }
 
